--- a/index.html
+++ b/index.html
@@ -2,26 +2,35 @@
 <html>
 <head>
   <title>Mini Map Lookup</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      margin-top: 50px;
-    }
-    input {
-      padding: 8px;
-      font-size: 16px;
-    }
-    button {
-      padding: 8px 16px;
-      font-size: 16px;
-    }
-    img {
-      margin-top: 20px;
-      max-width: 80%;
-      border: 1px solid #ccc;
-    }
-  </style>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    text-align: center;
+    margin-top: 50px;
+    font-size: 20px; /* bigger default font */
+  }
+  h1 {
+    font-size: 36px; /* bigger heading */
+  }
+  p {
+    font-size: 22px; /* bigger paragraph */
+  }
+  input {
+    padding: 12px;
+    font-size: 20px;  /* bigger input text */
+    width: 200px;     /* wider input box */
+  }
+  button {
+    padding: 12px 24px;
+    font-size: 20px;  /* bigger button text */
+  }
+  img {
+    margin-top: 20px;
+    max-width: 80%;
+    border: 1px solid #ccc;
+  }
+</style>
+
 </head>
 <body>
   <h1>Mini Map Lookup Tool</h1>
