--- a/index.html
+++ b/index.html
@@ -4,25 +4,25 @@
   <title>Mini Map Lookup</title>
 <style>
   body {
-    font-family: Arial, sans-serif;
+    font-family: Helvetica, sans-serif;
     text-align: center;
     margin-top: 50px;
-    font-size: 20px; /* bigger default font */
+    font-size: 32px; /* bigger default font */
   }
   h1 {
-    font-size: 36px; /* bigger heading */
+    font-size: 48px; /* bigger heading */
   }
   p {
-    font-size: 22px; /* bigger paragraph */
+    font-size: 32px; /* bigger paragraph */
   }
   input {
     padding: 12px;
-    font-size: 20px;  /* bigger input text */
+    font-size: 32px;  /* bigger input text */
     width: 200px;     /* wider input box */
   }
   button {
     padding: 12px 24px;
-    font-size: 20px;  /* bigger button text */
+    font-size: 32px;  /* bigger button text */
   }
   img {
     margin-top: 20px;
